--- a/src/main/webapp/WEB-INF/view/admin/tests/preview.html
+++ b/src/main/webapp/WEB-INF/view/admin/tests/preview.html
@@ -34,7 +34,7 @@
 
 <div class="container" style="min-width: 38rem; padding: 0; margin: auto; max-width: 1140px">
     <!--/*@thymesVar id="test" type="ru.spbu.distolymp.dto.admin.tests.TestPreviewDto"*/-->
-    <div style="border-color: black; border-width: 1px; border-style: solid">
+    <div style="border-color: black; border-width: 1px; border-style: solid; margin-left: 1rem; margin-right: 1rem;">
         <div style="margin: .5rem; overflow-wrap: anywhere; overflow: auto">
             <img th:src="@{/data/tests/{imageName}(imageName=${test.testFolder + '/' + test.imageName})}"
                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
@@ -59,7 +59,7 @@
         <a th:href="@{/tests/view/{id}(id=${test.id})}" class="pbutton">Начать выполнение теста</a>
     </div>
 
-    <div style="margin-top: 1rem; margin-bottom: .5rem"
+    <div style="margin: 1rem 1rem .5rem;"
          th:text="'Время сервера при открытии страницы: ' + ${test.currentServerDateTime}"></div>
 </div>
 
