Added view for Task Lists

--- a/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
+++ b/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
@@ -21,7 +21,7 @@
         <a href="#">Группы</a>
     </li>
     <li>
-        <a href="#">Списки заданий</a>
+        <a th:href="@{/lists/list}">Списки заданий</a>
     </li>
     <li>
         <a th:href="@{/directories/list}">Справочники</a>
