Removed outdated files

--- a/src/main/webapp/WEB-INF/view/admin/directories/lists/single-listing.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/lists/single-listing.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.6.0/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/styles/style.css}">
+    <link rel="stylesheet" th:href="@{/css/styles/reset.css}">
 </head>
 <body>
   <div id="single-listing" hidden>
